# sev-tool

src/: Makefile.am  commands.cpp  commands.h  crypto.cpp  crypto.h  main.cpp  sevapi.h  sevcert.cpp  sevcert.h
